--- a/style.css
+++ b/style.css
@@ -22,19 +22,19 @@ body {
 
 .container {
     width: calc(100% - 100px);
-    /* height: calc(100% - 100px); */
-    max-width: 1100px;
+    height: calc(100% - 70px);
+    max-width: 800px;
     border-radius: 32px;
     background-color: #020617cc;
-    padding: 60px;
+    padding: 40px;
     display: flex;
     border: 1px solid var(--gray-04);
+    /* gap: 40px; */
     flex-direction: column;
     align-items: center;
-    gap: 40px;
-    align-content: center;
     justify-content: space-between;
     flex-wrap: nowrap;
+    align-content: space-between;
 }
 
 .content {
@@ -49,23 +49,21 @@ body {
 
 .texts {
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: column;
-    flex-wrap: nowrap;
     align-content: center;
-    gap: 24px;
+    gap: 20px;
+    flex-direction: column;
+    align-items: center;
 }
 
 .texts .icon {
     padding: 12px;
-    width: 64px;
-    height: 64px;
+    width: 55px;
+    height: 55px;
 }
 
 .heading {
     color: var(--gray-01);
-    font-size: 28px;
+    font-size: 1.5rem;
     font-weight: 600;
     line-height: 130%;
     text-align: center;
@@ -87,12 +85,12 @@ body {
 
 .icon {
     display: flex;
-    width: 42px;
-    height: 42px;
-    padding: 10px;
+    width: 40px;
+    height: 40px;
+    padding: 7px;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
+    border-radius: 7px;
     border: 1px solid var(--gray-04);
     background: var(--gray-06);
     background-repeat: no-repeat;
@@ -101,13 +99,14 @@ body {
 
 .buttons {
     display: flex;
-    align-items: center;
     justify-content: center;
+    gap: 8px;
     flex-direction: column;
-    gap: 16px;
-    width: calc(100% - 100px);
-    margin: 0 50px;
-    max-width: 500px;
+    width: 100%;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    /* margin-bottom: 20px; */
 }
 
 .card {
@@ -116,17 +115,21 @@ body {
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
-    padding: 13px;
+    padding: 9px;
     border-radius: 10px;
     border: 1px solid var(--gray-04);
     background: var(--gray-06);
     cursor: pointer;
+    width: 100%;
+    max-width: 450px;
 }
 .card:hover, .card:hover .icon {
     background-color: var(--gray-07);
 }
-.card:hover .arrowright, .card:hover .icon {
-    transform: scale(1.2);
+.card:hover .arrowright, 
+.card:hover .icon,
+.input-box span:hover{
+    transform: scale(1.1);
     transition: all 0.2s;
 }
 
@@ -145,16 +148,17 @@ body {
 hr {
     width: 100%;
     border: 1px solid var(--gray-04);
-    margin-bottom: 40px;
+    margin-bottom: 25px;
 }
 
 .message-box {
     display: flex;
     width: 100%;
     flex-direction: column;
-    align-content: space-between;
-    justify-content: center;
+    align-content: stretch;
+    justify-content: flex-end;
     align-items: stretch;
+    flex-wrap: nowrap;
 }
 
 input {
